feat(server): support for pagination
